@@ -3,6 +3,13 @@
 Jumpcut predates the widespread adoption of semantic versioning; as such,
 pre-1.0 releases are numbered as 0.XX.
 
+## UNRELEASED
+### Fixed
+- Improved detection of Jumpcut-created clips; previously, we were
+relying on an exact match between the item on the pasteboard and the
+first clip in Jumpcut's stack, which fails to detect items coming from
+Jumpcut *not* at the top of the stack. We now set a marker and ignore
+any items that Jumpcut has pasted, regardless of their stack position.
 ## [0.72] - 2020-02-20
 ### Fixed
 - Fixed issue preventing default hotkey (Control-Option-V) from being set
